autoexpunge trash after 30 days

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -15,6 +15,7 @@ verbose_ssl = no
 mail_location = maildir:/var/mail/vmail/%d/%n
 mail_plugins = $mail_plugins mail_crypt zlib
 mailbox_list_index = yes
+mail_always_cache_fields = date.save
 
 #plugin setup
 plugin {
@@ -169,6 +170,7 @@ namespace inbox {
   }
   mailbox Trash {
     special_use = \Trash
+    autoexpunge = 30d
   }
 
   mailbox Sent {
