--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -13,6 +13,7 @@ auth_debug_passwords = no
 mail_debug = no
 verbose_ssl = no
 mail_location = maildir:/var/mail/vmail/%d/%n
+mail_home = /var/mail/vmail/%d/%n
 mail_plugins = $mail_plugins mail_crypt zlib
 mailbox_list_index = yes
 mail_always_cache_fields = date.save
