--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -14,7 +14,7 @@ mail_debug = no
 verbose_ssl = no
 mail_location = maildir:/var/mail/vmail/%d/%n
 mail_home = /var/mail/vmail/%d/%n
-mail_plugins = $mail_plugins mail_crypt zlib
+mail_plugins = $mail_plugins mail_crypt quota zlib
 mailbox_list_index = yes
 mail_always_cache_fields = date.save
 
@@ -58,11 +58,8 @@ ssl_prefer_server_ciphers = yes
 
 #protocol setup
 protocols = "imap pop3 lmtp"
-protocol lmtp {
-	postmaster_address = postmaster@danwin1210.de
-}
 protocol imap {
-  mail_plugins = $mail_plugins quota imap_quota imap_zlib last_login
+  mail_plugins = $mail_plugins imap_quota imap_zlib last_login
 }
 protocol pop3 {
   mail_plugins = $mail_plugins last_login
