--- a/etc/systemd/system/mail-cron.service
+++ b/etc/systemd/system/mail-cron.service
@@ -1,8 +1,6 @@
 [Unit]
 Description=Mail cron
-After=srv.mount
-Requires=srv.mount
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/php /srv/var/www/mail/cron.php
+ExecStart=/usr/bin/php /var/www/mail/cron.php
