--- a/etc_clearnet_proxy/turnserver.conf
+++ b/etc_clearnet_proxy/turnserver.conf
@@ -457,7 +457,7 @@ realm=danwin1210.de
 # Use PEM file format.
 #
 #cert=/usr/local/etc/turn_server_cert.pem
-cert=/etc/acme.sh/danwin1210.de_ecc/fullchain.cer
+cert=/etc/ssl/certs/ssl-cert-snakeoil.pem
 
 # Private key file.
 # Use an absolute path or path relative to the
@@ -465,7 +465,7 @@ cert=/etc/acme.sh/danwin1210.de_ecc/fullchain.cer
 # Use PEM file format.
 #
 #pkey=/usr/local/etc/turn_server_pkey.pem
-pkey=/etc/acme.sh/danwin1210.de_ecc/danwin1210.de.key
+pkey=/etc/ssl/private/ssl-cert-snakeoil.key
 
 # Private key file password, if it is in encoded format.
 # This option has no default value.
