--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -47,8 +47,8 @@ auth_mechanisms = plain login
 
 #TLS parameters
 ssl = required
-ssl_cert = </etc/acme.sh/danwin1210.de_ecc/fullchain.cer
-ssl_key = </etc/acme.sh/danwin1210.de_ecc/danwin1210.de.key
+ssl_cert = </etc/ssl/certs/ssl-cert-snakeoil.pem
+ssl_key = </etc/ssl/private/ssl-cert-snakeoil.key
 ssl_client_ca_dir = /etc/ssl/certs
 ssl_dh = </etc/dovecot/dh.pem
 ssl_min_protocol = TLSv1.2
