Fix redirect to port 0 on squirrelmail

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -114,6 +114,12 @@ http {
 	}
 	expires $expires;
 
+	map $server_port $php_port {
+		80  80;
+		443  443;
+		default 80;
+	}
+
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 }
