Auto-create common folders - Fixes #16

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -161,17 +161,20 @@ dict {
 namespace inbox {
   inbox = yes
   mailbox Drafts {
+    auto = subscribe
     special_use = \Drafts
   }
   mailbox Junk {
     special_use = \Junk
   }
   mailbox Trash {
+    auto = subscribe
     special_use = \Trash
     autoexpunge = 30d
   }
 
   mailbox Sent {
+    auto = subscribe
     special_use = \Sent
   }
   mailbox "Sent Messages" {
