Add sieve suppot

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -34,6 +34,7 @@ plugin {
   quota_vsizes = yes
   last_login_dict = proxy::lastlogin
   last_login_key = last-login/%u
+  sieve = file:~/sieve;active=~/.dovecot.sieve
 }
 
 #auth settings
