Enable sieve protocol

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -58,14 +58,19 @@ ssl_curve_list = X448:X25519:secp521r1:secp384r1
 ssl_prefer_server_ciphers = yes
 
 #protocol setup
-protocols = "imap pop3 lmtp"
+protocols = "imap pop3 lmtp sieve"
 protocol imap {
   mail_plugins = $mail_plugins imap_quota imap_zlib last_login
 }
 protocol pop3 {
   mail_plugins = $mail_plugins last_login
 }
-
+protocol lmtp {
+  mail_plugins = $mail_plugins sieve
+}
+protocol sieve {
+  mail_plugins =
+}
 #service setup
 service anvil {
   unix_listener anvil-auth-penalty {
