Enable IMAP hibernation

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -17,6 +17,7 @@ mail_home = /var/mail/vmail/%d/%n
 mail_plugins = $mail_plugins mail_crypt quota zlib
 mailbox_list_index = yes
 mail_always_cache_fields = date.save
+imap_hibernate_timeout = 5s
 
 #plugin setup
 plugin {
@@ -108,6 +109,9 @@ service auth-worker {
 service imap {
   service_count = 1000
   client_limit = 1
+  unix_listener imap-master {
+    user = $default_internal_user
+  }
 }
 service imap-login {
   inet_listener imap {
@@ -115,7 +119,7 @@ service imap-login {
   }
   service_count = 1000
   vsz_limit = 1G
-  process_min_avail = 4
+  process_min_avail = 1
 }
 service lmtp {
   unix_listener /var/spool/postfix/private/dovecot-lmtp {
