Enable imap_sieve

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -14,7 +14,7 @@ mail_debug = no
 verbose_ssl = no
 mail_location = maildir:/var/mail/vmail/%d/%n
 mail_home = /var/mail/vmail/%d/%n
-mail_plugins = $mail_plugins mail_crypt quota zlib
+mail_plugins = mail_crypt quota zlib last_login
 mailbox_list_index = yes
 mail_always_cache_fields = date.save
 imap_hibernate_timeout = 5s
@@ -36,6 +36,8 @@ plugin {
   last_login_dict = proxy::lastlogin
   last_login_key = last-login/%u
   sieve = file:~/sieve;active=~/.dovecot.sieve
+  sieve_plugins = sieve_imapsieve
+  imapsieve_url = sieve://danwin1210.de
 }
 
 #auth settings
@@ -61,13 +63,10 @@ ssl_prefer_server_ciphers = yes
 #protocol setup
 protocols = "imap pop3 lmtp sieve"
 protocol imap {
-  mail_plugins = $mail_plugins imap_quota imap_zlib last_login
-}
-protocol pop3 {
-  mail_plugins = $mail_plugins last_login
+  mail_plugins = $mail_plugins imap_quota imap_zlib imap_sieve
 }
 protocol lmtp {
-  mail_plugins = $mail_plugins sieve
+  mail_plugins = mail_crypt quota zlib sieve
 }
 protocol sieve {
   mail_plugins =
