enable imap_metadata

--- a/etc/dovecot/dovecot.conf
+++ b/etc/dovecot/dovecot.conf
@@ -14,10 +14,11 @@ mail_debug = no
 verbose_ssl = no
 mail_location = maildir:/var/mail/vmail/%d/%n
 mail_home = /var/mail/vmail/%d/%n
-mail_plugins = mail_crypt quota zlib last_login
+mail_plugins = mail_crypt quota zlib
 mailbox_list_index = yes
 mail_always_cache_fields = date.save
 imap_hibernate_timeout = 5s
+mail_attribute_dict = file:%h/dovecot-attributes
 
 #plugin setup
 plugin {
@@ -63,10 +64,11 @@ ssl_prefer_server_ciphers = yes
 #protocol setup
 protocols = "imap pop3 lmtp sieve"
 protocol imap {
-  mail_plugins = $mail_plugins imap_quota imap_zlib imap_sieve
+  mail_plugins = $mail_plugins imap_quota imap_zlib imap_sieve last_login
+  imap_metadata = yes
 }
 protocol lmtp {
-  mail_plugins = mail_crypt quota zlib sieve
+  mail_plugins = mail_crypt quota zlib sieve last_login
 }
 protocol sieve {
   mail_plugins =
